# Chess

./: CMakeLists.txt  ChessClone2.sln  ChessClone2.vcxproj  ChessClone2.vcxproj.filters  README.md  TODO.txt  chess
ChessCode/Include/: firstscript.h
GameCode/Chess/: backMainButton.h  clientComponents.h  clientScenes.h  clientSystems.h  exitButton.h  firstscript.h  guiSystem.cpp  guiSystem.h  menuBackground.h  playButton.h  renderSystem.h  scene1.h  settingsBackground.h  settingsButton.h  spriteSystem.h  textSystem.h
Headers/: Header.h  apl.h  drawable2D.h  guiManager.h  helper.h  observer.h  platform.h  rectangle.h  scene.h  sceneManager.h  scriptable.h  shader.h  signal.h  text.h  texture.h  utility.h  window.h
Headers/Types/: color.h  matrix.h  ptr.h  vector.h
Headers/components/: button.h  guiComponent.h  guiElement.h  mesh.h  script.h  scriptable.h  sprite.h  text.h
Headers/ecs/: ComponentManager.cpp  ComponentManager.h  ComponentPool.h  ECSM.cpp  ECSM.h  ECSManager.cpp  ECSManager.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.h  component.h  componentPool.h  ecs.h  ecsTypes.h  entity.h  scriptSystem.h  system.h  type_name.h
Headers/newECS/: ComponentManager.cpp  ComponentManager.h  ComponentPool.h  ECSManager.cpp  ECSManager.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h  (+1 more)
ShaderSrc/: GUIFragment.glsl  fragment.glsl  spriteFragment.glsl  spriteVertex.glsl  textFragment.glsl
Src/: apl.cpp  drawable2D.cpp  guiMannager.cpp  helper.cpp  main.cpp  rectangle.cpp  shader.cpp  text.cpp  texture.cpp
(+3 files in other folders)
